--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/unity,visualstudio
+# Created by https://www.gitignore.io/api/visualstudio,unity
 
 ### Unity ###
 /[Ll]ibrary/
@@ -310,4 +310,4 @@ __pycache__/
 ### VisualStudio Patch ###
 build/
 
-# End of https://www.gitignore.io/api/unity,visualstudio
+# End of https://www.gitignore.io/api/visualstudio,unity
